--- a/examples/connection.html
+++ b/examples/connection.html
@@ -6,7 +6,7 @@
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.6/jquery.min.js"></script>
 
 
-<script type="text/javascript" src="http://jair.lab.fi.uva.es/~alvagar/jQuery-XMPP-plugin/jquery.xmpp.js"></script>
+<script type="text/javascript" src="https://raw.github.com/maxpowel/jQuery-XMPP-plugin/master/jquery.xmpp.js"></script>
 
 
 <body>
@@ -30,7 +30,7 @@ $(document).ready(function(){
 		var password = $("#pass").val();
 		var logContainer = $("#log");
 		
-		//An example of bosh server. This site is working but it can change or go down.
+		//An example of bosh server url. This site is working but it can change or go down.
 		//If you are going to have a production site, you must install your own BOSH server
 		var url ="http://bosh.metajack.im:5280/xmpp-httpbind";
 		$.xmpp.connect({url:url, jid: jid, password: password,
